# zephyr

./: Kconfig.zephyr
arch/arm/core/aarch32/: userspace.S
boards/arm/stm32f429i_disc1/: stm32f429i_disc1.dts
boards/shields/ls0xx_generic/: ls013b7dh03.overlay
doc/: conf.py  zephyr.doxyfile.in
drivers/display/: CMakeLists.txt  Kconfig  Kconfig.lpm0xx  lpm0xx.c  ls0xx.c
drivers/i2c/: i2c_nrfx_twi.c
drivers/kscan/: kscan_sdl.c
dts/bindings/display/: jdisplay,lpm0xx.yaml
ext/hal/nordic/nrfx/drivers/include/: nrfx_twi.h
ext/hal/nordic/nrfx/drivers/src/: nrfx_twi.c
include/drivers/: display.h
include/toolchain/: common.h
lib/gui/lvgl/: CMakeLists.txt  Kconfig.graphical  Kconfig.memory  lv_conf.h  lvgl.c  lvgl_display.c  lvgl_display.h  lvgl_display_3bit.c  lvgl_display_mono.c
samples/display/lvgl/: prj.conf
samples/display/ratch_gui/: CMakeLists.txt  main.c  prj.conf
samples/display/ratch_gui/boards/: native_posix_64.conf  nrf52840_kwp2.conf
samples/display/ratch_gui/src/: external.h  main.c  main_list  main_menu_container_WIP  main_menu_follow_top  main_menu_workin_V1  main_menu_workin_V2_transitions  simple_hardware_button
samples/display/ratch_gui/src/gui/: gui.c  gui.h  gui_priv.h  helper.c  input.c  pagestack.c
samples/display/ratch_gui/src/gui/fonts/: roboto_condensed_bold_18.c  roboto_condensed_regular_18.c
samples/display/ratch_gui/src/menu/: menu.c  menu.h
samples/display/simple_display/: prj.conf
samples/display/simple_display/src/: main.c
scripts/: gen_syscalls.py  requirements-doc.txt
scripts/ci/: check_compliance.py
